got the main styling fixed, except the overflow-y does not work.  Also user list is positioned strange - see draft project

--- a/public/style.css
+++ b/public/style.css
@@ -28,12 +28,12 @@
     justify-content: center;
   }
   
-  #root > aside button {
+  /* #root > aside button {
     background: #111;
     color: #fff;
     font-weight: bold;
     letter-spacing: 3px;
-  }
+  } */
 
   #album-list {
     display: grid;
@@ -42,9 +42,8 @@
     border: 10px solid blue;
   };
 
-  #user-list,
-  #post-list,
-  #album-list {
+
+  #post-list {
     display: grid;
     grid-gap: 24px;
     overflow-y: scroll;
@@ -54,11 +53,18 @@
     grid-template-rows: repeat(auto-fit, auto);
   }
 
-  #user-list {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto-fit, 1fr);
-  }
+#user-list {
+  display: grid;
+  grid-gap: 24px;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  overflow-y: scroll; /* is not working... */
+}
 
+#user-list {
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
+}
   
   
   /* #root main > section:not(.active) {
