--- a/src/components/section-wrapper/section-wrapper.styles.scss
+++ b/src/components/section-wrapper/section-wrapper.styles.scss
@@ -1,7 +1,7 @@
-.SectionWrapper {
+/* .SectionWrapper {
     padding-top: 4rem;
 }
 
 .GrayBg {
     background-color: #fff;
-}
+} */
