--- a/src/components/user-card/user-card.styles.scss
+++ b/src/components/user-card/user-card.styles.scss
@@ -23,3 +23,10 @@
     flex-direction: column;
 };
 
+.user-card footer button {
+    padding: 8px;
+    font-size: 16px;
+    background: black;
+    text-transform: uppercase;
+  }
+
